added functionality to chose between bruch tool and the rectangle tool when using the editor

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,3 +69,8 @@ img {
 .delete-button:hover {
   background-color: darkred;
 }
+.cursor {
+  position: absolute;
+  pointer-events: none;
+  z-index: 1000;
+}
